--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ body {
   text-decoration: none;
   font-weight: 500;
   margin-left: 35px;
-  transition: 0.3;
   opacity: 0;
   cursor: pointer;
   animation: slideLeft 1s ease forwards;
@@ -863,3 +862,21 @@ form textarea {
 }
 
 /* ------------------- ANIMATION SECTION ------------------- */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0ef;
+  border-radius: 20px;
+  
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(10, 158, 168);
+}
