--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  height: 80px;
   padding: 20px 10%;
   background-color: #000;
   display: flex;
@@ -26,22 +27,23 @@ body {
   z-index: 100;
 }
 
-.logo {
+.logo img {
   position: relative;
-  font-size: 25px;
+  width: 60px;
   text-decoration: none;
-  font-weight: 600;
   color: #0ef;
   cursor: pointer;
   opacity: 0;
   animation: slideRight 1s ease forwards;
   transition: 0.5s ease;
+  border-radius: 50%;
+
 }
 
-.logo:hover {
-  font-size: 30px;
+.logo img:hover {
+  width: 75px;
   color: #0ef;
-  text-shadow: 0 0 5px #0ef, 0 0 25px #0ef, 0 0 50px;
+  box-shadow: 0 0 5px #0ef, 0 0 25px #0ef, 0 0 50px;
 }
 
 .navbar a {
@@ -75,6 +77,7 @@ body {
   height: 100vh;
   background: url(img/fabian-irsara-67l-QujB14w-unsplash.jpg) no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   background-position: center;
   display: flex;
   align-items: center;
@@ -195,6 +198,7 @@ body {
   height: auto;
   width: 100%;
   margin: 50px 0 0 10px;
+  animation: imgScale 3s ease infinite;
 }
 
 .about-text h2 {
@@ -218,6 +222,18 @@ body {
   font-size: 20px;
   line-height: 1.4;
   margin-bottom: 4rem;
+}
+
+@keyframes imgScale {
+  0% {
+    transform: scale(.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(.8);
+  }
 }
 
 /* ------------------- END ABOUT ME --------------------------*/
@@ -247,7 +263,7 @@ body {
 
 .services-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(359px, 1fr));
   grid-gap: 40px;
   margin-top: 50px;
 }
@@ -255,8 +271,8 @@ body {
 .services-list div {
   background-color: transparent;
   padding: 40px;
+  height: 450px;
   font-size: 13px;
-  font-weight: 13px;
   border-right: 10px;
   border-radius: 20px;
   transition: background 0.5s, transform 0.5s;
@@ -269,10 +285,15 @@ body {
 }
 
 .services-list div h2 {
+  text-decoration: 5px  underline #0ef;
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 15px;
 }
+
+.services-list div p {
+  font-size: 18px;
+} 
 
 .services-list div a {
   text-decoration: none;
@@ -806,11 +827,25 @@ form textarea {
   font-size: 20px;
   padding: 20px;
   border-radius: 50%;
+  animation: topMove 3s ease infinite;
 }
 
 .top:hover i {
   box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
     0 0 200px cyan;
+    animation: none;
+}
+
+@keyframes topMove {
+  0% {
+    transform: scale(.7);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(.7);
+  }
 }
 
 /* ------------------------------- END LAST ----------------------------- */
