--- a/style.css
+++ b/style.css
@@ -915,3 +915,230 @@ form textarea {
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(10, 158, 168);
 }
+
+/*---------------------- Respositivity------------------------ */
+
+/* Toggle button */
+
+.icons {
+  position: absolute;
+  font-size: 2.8rem;
+  color: #0ef;
+  cursor: pointer;
+  display: none;
+  right: 5%;
+}
+
+
+
+#check {
+  display: none;
+}
+/* Toggle button */
+
+@media (max-width: 992px) {
+
+  .header {
+    padding: 1.3rem 5%;
+  }
+
+  .logo img:hover {
+    width: 60px;
+    box-shadow: none;
+  }
+}
+
+@media (max-width: 768px) {
+/* ----------------RESET BODY ------------------*/
+  body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    position: relative;
+  }
+/* ----------------RESET BODY ------------------*/
+
+/* ----------------------HEADER LINKS --------------- */
+  .icons {
+    display: inline-flex;
+  }
+
+  #check:checked~.icons #menu-icon {
+    display: none;
+  }
+
+  .icons #close-icon {
+    display: none;
+  }
+
+  #check:checked~.icons #close-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 40%;
+    height: 0;
+    background-color: #000000;
+    transition: 0.3s ease;
+    overflow: hidden;
+  }
+
+  #check:checked~.navbar {
+    height: 20rem;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 1.1rem;
+    margin: 2.1rem;
+    text-align: center;
+    color: #0ef;
+    transform: translateY(-50px);
+    transition: 0.3s ease;
+  }
+
+  #check:checked~.navbar a {
+    transform: translateY(0);
+  }
+
+  .navbar a:hover {
+    text-shadow: none;
+    font-size: 1.1rem
+}
+
+/* ------------HOME CONTENT --------------------- */
+  .home {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: #081b29;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .home-content h3 {
+    font-size: 30px;
+    margin-bottom: 5px;
+  }
+
+  .home-content h1 {
+    font-size: 40px;
+    margin-bottom: 5px;
+  }
+
+  .home-content p {
+    text-align: left;
+  }
+
+  /* -------------------ABOUR CONTENT ---------------------*/
+  .about {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .about-text h2 {
+    font-size: 40px;
+  }
+
+
+  .about-text h4 {
+  line-height: 1.1;
+  margin: 15px 0 20px;
+}
+
+  .about-text p {
+  line-height: 1.4;
+  margin-bottom: 4rem;
+  text-align: left;
+  padding: 10px;
+}
+
+/* ----------------SURVICES SECTION-------------------- */
+  .sub-title {
+  font-size: 45px;
+  padding: 50px 0;
+}
+
+  .container {
+  padding: 10px;
+}
+
+
+  .services-list div i {
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+
+  .services-list div h2 {
+  text-decoration: 3px  underline #0ef;
+  font-size: 25px;
+  margin-bottom: 15px;
+  line-height: 1.5;
+}
+
+  .services-list div p {
+  font-size: 16px;
+  margin-bottom: 10px;
+} 
+
+/*-------------------- SKILLS SECTION -------------------- */
+
+  .section-skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container1 {
+  position: relative;
+  width: 360px;
+  height: 500px;
+  padding: 5px;
+  margin: 0;
+}
+
+
+  .heading1 {
+  margin-bottom: 30px;
+}
+
+/*--------------------------- CONTACT ME------------------------ */
+
+  .contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  .contact-text h2 {
+  font-size: 40px;
+  line-height: 1.1;
+}
+
+.contact-text h4 {
+  font-size: 18px;
+}
+
+
+  .contact-text p {
+  font-size: 16px;
+  line-height: 30px;
+  margin-bottom: 1.5rem;
+}
+
+  .contact-list {
+  margin-bottom: 1rem;
+}
+
+.last-text {
+  margin-top: 20px;
+}
+}
