--- a/style.css
+++ b/style.css
@@ -415,8 +415,8 @@ body {
 .javascript span {
   width: 50%;
 }
-.react span {
-  width: 5%;
+.bootstrap span {
+  width: 30%;
 }
 
 .progress-line span::after {
@@ -441,8 +441,8 @@ body {
 .javascript span::after {
   content: "50%";
 }
-.react span::after {
-  content: "5%";
+.bootstrap span::after {
+  content: "30%";
 }
 
 .progress-line span::before {
@@ -715,7 +715,6 @@ body {
   display: inline-block;
   color: #0ef;
   font-size: 20px;
-  font-weight: 600;
   transition: all 0.4s ease;
 }
 
