--- a/Projects-site/css-file/home.css
+++ b/Projects-site/css-file/home.css
@@ -212,3 +212,69 @@ body {
         width: 390px;
     }
 }
+
+
+/* LOADING PAGE */
+
+.loader {
+    z-index: 99999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #081b29;
+    position: fixed;
+    min-height: 100vh;
+    width: 100%;
+}
+
+.ring {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    animation: ring 2s linear infinite;
+}
+
+@keyframes ring {
+    0% {
+        transform: rotate(0deg);
+        box-shadow: 1px 5px 3px #0ef, 1px 5px 5px #0ef;
+    }
+
+    50% {
+        transform: rotate(180deg);
+        box-shadow: 1px 5px 3px #0ef, 1px 5px 5px #0ef;
+    }
+
+    100% {
+        transform: rotate(360deg);
+        box-shadow: 1px 5px 3px #0ef, 1px 5px 5px #0ef;
+    }
+
+}
+
+.ring:before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(0, 238, 255, 0.934);
+}
+
+.loading {
+    color: #0ef;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    line-height: 200px;
+    animation: text 2s ease-in-out infinite;
+}
+
+@keyframes text {
+    50% {
+        color: #081b29;
+    }
+}
